Fix school filter and add course duration api
